fix(2022): update svg with 2022 and fix CSV parsing
- update svg files with 2022
- change colours of the badges
- move the `Universities` variables to the left so that most of
the title can be printed
- fix the CSV parsing: columns of Yurplan's CSV have changed
- udpate doc README.adoc

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
-inputFile: participants_snowcamp-2020.csv
-univsFile: participants_ateliers_snowcamp-2020.csv
+inputFile: participants_snowcamp-2022.csv
+univsFile: participants_ateliers_snowcamp-2022.csv
 outputDirectory: target
 
 badge:
   colors:
-    attendee: "#FFF20C"
-    speaker: "#A9B2FF"
-    sponsor: "#4DCA2C"
+    attendee: "#3FC633"
+    speaker: "#FEAF00"
+    sponsor: "#E51AE2"
     staff: "#ee0000"
